// SPDX-License-Identifier: AGPL-3.0-only

syntax = "proto3";

package rangevectorsplitting;

import "gogoproto/gogo.proto";
import "google/protobuf/duration.proto";

option (gogoproto.equal_all) = false;
option (gogoproto.marshaler_all) = true;
option (gogoproto.messagename_all) = true;
option (gogoproto.unmarshaler_all) = true;

message SplitFunctionCallDetails {
  repeated SplitRange splitRanges = 1 [(gogoproto.nullable) = false];
  string innerNodeCacheKey = 2;
}

// SplitRange represents a time range within a split.
// Start is exclusive (points with timestamp > Start are included).
// End is inclusive (points with timestamp <= End are included).
message SplitRange {
  int64 start = 1;
  int64 end = 2;
  bool cacheable = 3;
}
